<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_rndis"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <Button
        android:id="@+id/createShortcutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_shortcut"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addTileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addTileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_quick_settings_tile"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/testConnectionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/testConnectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_connection"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/adbHostText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/adbHostText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/adb_host"
        android:inputType="text"
        android:text="127.0.0.1"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/adbPortText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/adbPortText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/adb_port"
        android:inputType="number"
        android:text="5555"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/saveSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
